Fix message spacing on long names

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -180,7 +180,7 @@ h1 {
 .dialog {
   grid-area: dialog;
   place-content: center;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 .message-generator {
   align-self: center;
